--- a/style.css
+++ b/style.css
@@ -51,6 +51,13 @@ a:hover {
 button {
     float: left;
 }
+.card-project {
+    transition: transform .5s;
+  }
+  
+  .card-project:hover {
+    transform: scale(1.03); 
+  }
 
 @media screen and (min-width:360px) and (max-width:1024px) {
     .horizontal{
